feat(#77): expose group administration API
